@@ -64,6 +64,7 @@ span.block	{display:block;}
 .wrap_recipient_country,
 .wrap_sector		{color:#444; background-color:#fff; margin-top:-20px; width:960px; margin-left:-40px; padding:0 0 40px 0;}
 .wrap_recipient_country	{padding:40px 0;}
+.wrap_country_budget_items	{padding-top:40px;}
 .sector,
 .sector_list_wrap		{color:#444; font-size:14px; line-height:18px; padding:0 40px;}
 .sector_list_wrap span	{display:inline-block; vertical-align:top; padding-right:40px; width:30%;}
