@@ -62,7 +62,7 @@
 {_it./contact-info&&_it:/wrap-contact-info||}
 {_it./related-activity&&_it:/wrap-related-activity||}
 {_it./other-identifier&&_it:/wrap-other-identifier||}	<!--	NEW	-->
-{_it./country-budget-items/budget-item&&_it:/wrap-country-budget-items}
+{_it./country-budget-items/budget-item&&_it:/wrap-country-budget-items||}
 {_it./conditions&&_it:/wrap-conditions||}
 {_it./capital-spend&&_it:/wrap-capital-spend||}
 {_it./legacy-data&&_it:/wrap-legacy-data||}
@@ -72,29 +72,53 @@
 </div>
 
 	
+#^/wrap-other-identifier	<!--	OTHER IDENTIFIER WRAPPER	-->
+	<div class="wrap_other_identifier">
+		<div class="header_section sticky collapsable">other identifier<span class="count">( {_it./other-identifier.length} )</span></div>
+		<table class="budget sortable">
+			<thead>
+				<tr>
+					<th class="other_ref" data-sort="string" data-sort-multicolumn="0,1,2,3">REFERENCE IDENTIFIER</th>
+					<th class="owner_ref" data-sort="string" data-sort-multicolumn="0,1,2,3">OWNER ORG IDENTIFIER</th>
+					<th class="other_type" data-sort="int" data-sort-multicolumn="0,1,2,3">TYPE</th>
+					<th class="other_desc" data-sort="string" data-sort-multicolumn="0,1,2,3">DESCRIPTION</th>			
+				</tr>
+			</thead>
+			{_it./other-identifier:/other-identifier}
+		</table>
+	</div>
+
+<!--	OTHER IDENTIFIER ROWS	-->
+#^/other-identifier
+<tr class="row_count">
+	<td class="other_ref" data-sort-value="{_it.@ref}">{_it.@ref||}</td>
+	<td class="owner_ref" data-sort-value="{_it./owner-org@ref}"><a href="http://d-portal.org/q.html?aid={_it./owner-org@ref}">{_it./owner-org@ref||}</a>{_it./owner-org/narrative&&_it:/owner-org||}</td>
+	<td class="other_type" data-sort-value="{_it.@type-code}">{_it.@type-name||}</td>
+	<td class="other_desc" data-sort-value="{_it.@type-description}">{_it.@type-description||}</td>
+</tr>
+
+#^/owner-org
+<div>{_it./owner-org/narrative.0.text||}</div>
+
 #^/wrap-country-budget-items	<!--	COUNTRY BUDGET ITEMS WRAPPER	-->
 	<div class="header_section collapsable">country budget items <span class="count">( {_it./country-budget-items/budget-item.length} )</span></div>
-	<div class="wrap_sector">
+	<div class="wrap_sector wrap_country_budget_items">
 		{_it./country-budget-items@vocabulary&&_it:/country-budget-items-vocab||}
 	</div>
 	
 <!--	COUNTRY BUDGET ITEMS VOCAB	-->
 #^/country-budget-items-vocab
-<div class="header" title="{_it./country-budget-items@vocabulary-description||}">{_it./country-budget-items@vocabulary-name||} <span class="count">( {_it./country-budget-items@vocabulary/budget-item.length} )</span></div>
 {_it./country-budget-items/budget-item:/budget-item||}
 
 <!--	COUNTRY BUDGET ITEMS TEMPLATE	-->
 #^/budget-item
 <div class="sector">
 	<div class="wrap_code">
-		<span class="sector_code_text">{_it.@code-name||}</span><span class="sector_code">{_it.@code||}</span>
+		<span class="sector_code_text">{_it.@code-name||}</span><span class="sector_code">{_it.@code||}</span><span class="sector_code">{_it.@vocabulary-name||}</span>
 	</div><div class="wrap_bar">
 		<span class="sector_bar" style="width:calc({_it.@percentage} * 3.35px);"><span class="sector_overlay" style="width:calc({_it.@percentage} * 3.35px); background:rgba(0,153,255,calc({_it.@percentage}/100));"></span></span><span class="sector_value">{_it.@percentage||}</span>
 	</div>
 </div>
-
-
-
 
 #^/wrap-activity-status	<!--	ACTIVITY STATUS WRAPPER	-->
 	<div class="wrap_activity_status" style="background-color:{status.{_it./activity-status@code}};">
@@ -158,7 +182,7 @@
 
 #^/wrap-related-activity	<!--	RELATED ACTIVITY (PREVIOUSLY FAMILY TREE) WRAPPER	-->
 	<div class="wrap_related_activity">
-		<div class="header_section sticky collapsable">related-activity<span class="count">( {_it./related-activity.length} )</span></div>
+		<div class="header_section sticky collapsable">related activity<span class="count">( {_it./related-activity.length} )</span></div>
 		<table class="budget sortable">
 			<thead>
 				<tr>
