@@ -2,6 +2,8 @@ Development Portal (2020-02-07 shi)
 ==============================
 Update FAQ about narratives
 Add wrappers for remaining elements
+Display country-budget-items
+Display other identifier
 
 
 Development Portal (2020-02-06 shi)
